--- a/docker-compose.spark.yml
+++ b/docker-compose.spark.yml
@@ -15,11 +15,20 @@
 
 version: "3"
 services:
-  pio:
-    image: predictionio/pio:latest
+  spark-master:
+    image: bde2020/spark-master:2.2.1-hadoop2.7
+    container_name: spark-master
     ports:
-      - 7070:7070
-      - 8000:8000
-    volumes:
-      - ./templates:/templates
-    dns: 8.8.8.8
+      - "8080:8080"
+      - "7077:7077"
+    environment:
+      - INIT_DAEMON_STEP=setup_spark
+  spark-worker-1:
+    image: bde2020/spark-worker:2.2.1-hadoop2.7
+    container_name: spark-worker-1
+    depends_on:
+      - spark-master
+    ports:
+      - "8081:8081"
+    environment:
+      - "SPARK_MASTER=spark://spark-master:7077"
