update helm settings

--- a/charts/postgresql.yaml
+++ b/charts/postgresql.yaml
@@ -1,6 +1,7 @@
 postgresqlUsername: pio
 postgresqlPassword: pio
+postgresqlDatabase: pio
 
-#postgresqlConfiguration:
-#  listenAddresses: "'*'"
-
+# for testing
+persistence:
+  enabled: false
