--- a/charts/predictionio.yaml
+++ b/charts/predictionio.yaml
@@ -20,4 +20,6 @@ pio:
       value: pio_event
     - name: PIO_STORAGE_REPOSITORIES_EVENTDATA_SOURCE
       value: PGSQL
+    - name: PYSPARK_DRIVER_PYTHON_OPTS
+      value: "notebook --NotebookApp.token=''"
 
